css/wizard.css
/* ... */
#analyticsWizard .modal-header-top .icons-menu {
    position: absolute;
    right: 0;
    display: flex;
    align-items: center;
    justify-content: flex-end;

}

#analyticsWizard .modal-header-top .icons-menu .action-item {
    box-sizing: border-box;
    width: 44px;
    height: 44px;
    cursor: pointer;
    background-position: center;
    background-size: 22px;
}

#analyticsWizard .modal-header-top .icons-menu .action-item--single {
    box-sizing: border-box;
    width: auto;
    min-width: 33px;
    height: 15px;
    margin: 0;
    padding: 14px;
    cursor: pointer;
    border: none;
    border-radius: 18px;
    background-color: #7f7f7f;
}

#analyticsWizard .modal-header-top .icons-menu .action-item--single:hover, .action-item--single:focus, .action-item--single:active {
    opacity: 1;
    background-color: rgba(127, 127, 127, 1);
}

#analyticsWizard .modal-mask .modal-wrapper {
    position: relative;
}

#analyticsWizard .modal-wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
}

#analyticsWizard .modal-wrapper .prev,
#analyticsWizard .modal-wrapper .next {
    z-index: 10000;
    display: flex !important;
    align-items: center;
    justify-content: center;
    width: 8%;
    min-width: 60px;
    height: 100%;
    color: var(--color-primary-text);
}

#analyticsWizard .modal-wrapper .modal-container .wizardClose {
    position: absolute;
    top: 4px;
    right: 4px;
    color: var(--color-main-text);
    background-color: rgba(0, 0, 0, 0);
    border: 0;
    width: 44px;
    height: 44px;
    margin: 0px;
}

#analyticsWizard .modal-wrapper .modal-container .wizardClose:hover {
    background-color: var(--color);
    background-color: var(--color-background-hover);
}

#analyticsWizard .modal-wrapper .icon-view-next,
#analyticsWizard .modal-wrapper .icon-view-previous {
    background-color: var(--color-primary);
    color: var(--color-primary-text);
    box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
    left: 22px;
}

#analyticsWizard .modal-wrapper .icon-view-next,
#analyticsWizard .modal-wrapper .icon-view-previous {
    box-sizing: border-box;
    width: 44px;
    height: 44px;
    padding: 12px 11px;
    border-radius: 22px;
    font-size: 24px;
}

#analyticsWizard .modal-wrapper .modal-container {
    display: flex;
    flex-direction: column;
    height: 95% !important;
    width: 95% !important;
    max-width: 900px;
    max-height: 600px !important;
    position: relative;
    overflow: hidden;
    padding: 0;
    transition: transform 300ms ease;
    border-radius: var(--analytics-surface-radius);
    background-color: var(--color-main-background);
    box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
}

#analyticsWizard .modal-mask .modal-container {
    display: flex;
    flex-direction: column;
    height: 95% !important;
    width: 95% !important;
    max-width: 900px;
    max-height: 650px !important;
    position: relative;
}

#analyticsWizard .modal-body {
    flex-grow: 1;
    display: flex;
    overflow-x: hidden;
    overflow-y: auto;
    user-select: text !important;
}

#analyticsWizard .modal-body > div {
    display: flex;
    flex-grow: 1;
    align-items: center;
    justify-content: center;
}

#analyticsWizard .modal-footer {
    display: flex;
    flex-grow: 1;
    align-items: center;
    justify-content: center;
    height: 5px;
}

#analyticsWizard .modal-footer .dot {
    width: 10px;
    height: 10px;
    border-radius: 50%;
    border: solid 1px var(--color-main-text);;
    margin: 5px;
}

#analyticsWizard .modal-footer .dot.active {
    background-color: var(--color-primary);
}


#analyticsWizard .modal-header {
    height: 130px;
    max-height: 40vh;
    overflow: hidden;
    flex-shrink: 0;
}

#analyticsWizard .modal-header .firstrunwizard-header {
    padding: 20px 12px;
    background-color: var(--color-primary);
    background-size: contain;
    /*background-image: var(--image-background, var(--image-background-plain, linear-gradient(40deg, #0082c9 0%, #30b6ff 100%)));*/
    color: var(--color-primary-text);
    text-align: center;
}

#analyticsWizard .modal-header .firstrunwizard-header .logo {
    background-image: url(../img/logo.svg);
    background-size: contain;
    background-repeat: no-repeat;
    width: 235px;
    height: 100px;
    max-height: 20vh;
    margin: 0 auto;
}

#analyticsWizard .modal-header .firstrunwizard-header h2 {
    font-size: 20px;
    margin-top: 7px;
    line-height: 150%;
    color: var(--color-primary-text);
    font-weight: 300;
    padding: 0 0 10px;
}

#analyticsWizard .page {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin: auto;
}

#analyticsWizard .page h3 {
    margin: 10px 0 10px;
    line-height: 120%;
    background-position: 0;
}

#analyticsWizard .page .image {
    padding: 30px;
    max-width: calc(55% - 40px);
    flex-grow: 1;
}

#analyticsWizard .page .image img {
    width: 100%;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

#analyticsWizard .page .content {
    padding: 20px;
    width: 100%;
}

#analyticsWizard .page p {
    margin-bottom: 20px;
}

#analyticsWizard .page .description-block:first-child {
    margin-bottom: 20px;
}

#analyticsWizard .page .description {
    margin: 20px;
    width: auto;
    flex-grow: 1;
    max-width: calc(40% - 20px);
}

#analyticsWizard .page .description-wide {
    margin: 20px;
    width: auto;
    flex-grow: 1;
    max-width: calc(50% - 40px);
}

#analyticsWizard .page ul {
    margin: 10px;
}

#analyticsWizard .page ul li {
    margin-left: 20px;
    margin-bottom: 10px;
    list-style: circle outside;
}

#analyticsWizard .page ul .button {
    display: inline-block;
}

#analyticsWizard .page ul .button img {
    width: 16px;
    height: 16px;
    opacity: .5;
    margin-top: -3px;
    vertical-align: middle;
}

#analyticsWizard .page .content-clients {
    width: 100%;
    text-align: center;
}
/* ... */

